# engram

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  engram.toml.example  mkdocs.yml  pyproject.toml
docs/: index.md
docs/concepts/: why-deterministic.md
docs/design/: decisions.md  prior-art.md
docs/getting-started/: install.md
integrations/claude-code/: README.md  engram_recall_hook.py  engram_store_hook.py  settings.example.json
integrations/copilot-cli/: README.md
integrations/copilot-cli/.claude-plugin/: plugin.json
integrations/copilot-cli/agents/: semon.agent.md
integrations/copilot-cli/skills/engram-memory/: SKILL.md
scripts/: bootstrap.ps1  check.ps1  make-docs.ps1  vendor-assets.ps1
src/engram/: __init__.py  __main__.py  cli.py  config.py  version.py
src/engram/commands/: __init__.py  _shared.py  audit.py  autostore.py  doctor.py  forget.py  list_stale.py  rebuild.py  recall.py  store.py  usage.py  verify.py  view.py
src/engram/core/: __init__.py  aliases.py  chunker.py  db.py  notes.py  redaction.py  storage.py  worthiness.py
src/engram/core/schema/: 001_initial.sql  __init__.py
src/engram/integrations/: __init__.py
src/engram/recall/: __init__.py  fts.py  ranking.py
src/engram/viz/: __init__.py  edges.py  exporter.py  metrics.py  renderer.py  theme.py
src/engram/viz/templates/: static-3d.html.jinja  static.html.jinja
tests/: conftest.py
tests/integration/: test_autostore.py  test_forget.py  test_migration.py  test_store_recall.py
tests/unit/: test_aliases.py  test_chunker.py  test_edges.py  test_edges_pruning.py  test_fts.py  test_metrics.py  test_ranking.py  test_redaction.py  test_smoke.py  test_viz.py  test_worthiness.py
