[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.5.1"
description = "A self-sufficient, local-first, deterministic memory layer for AI sessions, with a force-directed knowledge graph viewer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Engram contributors" }]
keywords = ["ai", "memory", "knowledge-graph", "sqlite", "fts5", "rag", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Indexing",
]

dependencies = [
  "click>=8.1",
  "python-frontmatter>=1.1",
  "langchain-text-splitters>=0.3",
  "networkx>=3.3",
  "scipy>=1.13",
  "python-louvain>=0.16",
  "jinja2>=3.1",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
  "types-jinja2",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]
embeddings = [
  "sqlite-vec>=0.1",
  "fastembed>=0.4",
]

[project.scripts]
engram = "engram.cli:main"

[project.urls]
Homepage = "https://github.com/engram/engram"
Documentation = "https://github.com/engram/engram#readme"
Changelog = "https://github.com/engram/engram/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
engram = [
  "core/schema/*.sql",
  "viz/templates/*.jinja",
  "viz/assets/*",
]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "C4", "RET", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

# ---- black ----
[tool.black]
line-length = 100
target-version = ["py311"]

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/engram"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["frontmatter", "community", "networkx.*", "langchain_text_splitters.*"]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: integration tests",
  "property: hypothesis property-based tests",
]

[tool.coverage.run]
source = ["engram"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
